agrego ejecucion greedy

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -841,7 +841,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aproximación "
+    "### Aproximación usando Programación Lineal y Redondeo"
    ]
   },
   {
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -1249,18 +1249,18 @@
      "output_type": "stream",
      "text": [
       "Archivo          Óptimo    Aproximación    b     r(A)  Cumple relación de aproximación\n",
-      "-------------  --------  --------------  ---  -------  ---------------------------------------------------------\n",
-      "5.txt                 2               2    4  1        La solución aproximada cumple la relación de aproximación\n",
-      "7.txt                 2               2    6  1        La solución aproximada cumple la relación de aproximación\n",
-      "10_pocos.txt          3               6    7  2        La solución aproximada cumple la relación de aproximación\n",
-      "10_varios.txt         6               6    3  1        La solución aproximada cumple la relación de aproximación\n",
-      "10_todos.txt         10              10    4  1        La solución aproximada cumple la relación de aproximación\n",
-      "15.txt                4              11    6  2.75     La solución aproximada cumple la relación de aproximación\n",
-      "20.txt                5              12    7  2.4      La solución aproximada cumple la relación de aproximación\n",
-      "50.txt                6              13    7  2.16667  La solución aproximada cumple la relación de aproximación\n",
-      "75.txt                8              20    8  2.5      La solución aproximada cumple la relación de aproximación\n",
-      "100.txt               9              17    5  1.88889  La solución aproximada cumple la relación de aproximación\n",
-      "200.txt               9              24    7  2.66667  La solución aproximada cumple la relación de aproximación\n"
+      "-------------  --------  --------------  ---  -------  ---------------------------------\n",
+      "5.txt                 2               2    4  1        Sí\n",
+      "7.txt                 2               2    6  1        Sí\n",
+      "10_pocos.txt          3               6    7  2        Sí\n",
+      "10_varios.txt         6               6    3  1        Sí\n",
+      "10_todos.txt         10              10    4  1        Sí\n",
+      "15.txt                4              11    6  2.75     Sí\n",
+      "20.txt                5              12    7  2.4      Sí\n",
+      "50.txt                6              13    7  2.16667  Sí\n",
+      "75.txt                8              20    8  2.5      Sí\n",
+      "100.txt               9              17    5  1.88889  Sí\n",
+      "200.txt               9              24    7  2.66667  Sí\n"
      ]
     }
    ],
@@ -1279,9 +1279,9 @@
     "        r\n",
     "    ]\n",
     "    if r <= b:\n",
-    "        row.append(\"La solución aproximada cumple la relación de aproximación\")\n",
+    "        row.append(\"Sí\")\n",
     "    else:\n",
-    "        row.append(\"La solución aproximada no cumple la relación de aproximación\")\n",
+    "        row.append(\"No\")\n",
     "    table_data.append(row)\n",
     "    i += 1\n",
     "\n",
@@ -1299,11 +1299,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ordeno los pedidos de la prensa por cantidad de repeticiones y agarro los primeros k"
+    "from collections import Counter\n",
+    "\n",
+    "def ordenar_jugadores_por_apariciones(pedidos_de_la_prensa):\n",
+    "    jugadores = [jugador for lista in pedidos_de_la_prensa for jugador in lista]\n",
+    "    contador_jugadores = Counter(jugadores)\n",
+    "    jugadores_ordenados = sorted(contador_jugadores, key=lambda jugador: contador_jugadores[jugador], reverse=True)\n",
+    "    return jugadores_ordenados\n",
+    "\n",
+    "def solucion_greedy(pedidos_de_la_prensa):\n",
+    "    tiempo = time.time()\n",
+    "    i = 0\n",
+    "    solucionado = False\n",
+    "    solucion = []\n",
+    "    jugadores_ordenados = ordenar_jugadores_por_apariciones(pedidos_de_la_prensa)\n",
+    "    while i < len(jugadores_ordenados) and not solucionado:\n",
+    "        jugador_actual = jugadores_ordenados[0]\n",
+    "        solucion.append(jugador_actual)\n",
+    "        \n",
+    "        if verificar_solucion_para_Scaloni(pedidos_de_la_prensa, solucion):\n",
+    "            solucionado = True\n",
+    "        else:\n",
+    "            pedidos_de_la_prensa = [lista for lista in pedidos_de_la_prensa if jugador_actual not in lista]\n",
+    "            jugadores_ordenados = ordenar_jugadores_por_apariciones(pedidos_de_la_prensa)\n",
+    "        \n",
+    "        i += 1\n",
+    "    tiempo = time.time() - tiempo\n",
+    "    return solucion, tiempo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solucion_5, tiempo_ejecucion_5 = solucion_greedy(pedidos_prensa_5)\n",
+    "solucion_7, tiempo_ejecucion_7 = solucion_greedy(pedidos_prensa_7)\n",
+    "solucion_10_pocos, tiempo_ejecucion_10_pocos = solucion_greedy(pedidos_prensa_10_pocos)\n",
+    "solucion_10_varios, tiempo_ejecucion_10_varios = solucion_greedy(pedidos_prensa_10_varios)\n",
+    "solucion_10_todos, tiempo_ejecucion_10_todos = solucion_greedy(pedidos_prensa_10_todos)\n",
+    "solucion_15, tiempo_ejecucion_15 = solucion_greedy(pedidos_prensa_15)\n",
+    "solucion_20, tiempo_ejecucion_20 = solucion_greedy(pedidos_prensa_20)\n",
+    "solucion_50, tiempo_ejecucion_50 = solucion_greedy(pedidos_prensa_50)\n",
+    "solucion_75, tiempo_ejecucion_75 = solucion_greedy(pedidos_prensa_75)\n",
+    "solucion_100, tiempo_ejecucion_100 = solucion_greedy(pedidos_prensa_100)\n",
+    "solucion_200, tiempo_ejecucion_200 = solucion_greedy(pedidos_prensa_200)"
    ]
   }
  ],
