agrego comparacion greedy vs pl

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -517,9 +517,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 251,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'solucion_20_nuestro' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb Cell 29\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/valentinaadelsflugel/fiuba/TDA-I-Fiuba/TP3/TP3.ipynb#Y136sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m resultados_obtenidos_nuestros \u001b[39m=\u001b[39m [solucion_5_nuestro, solucion_15_nuestro, solucion_15_un_elemento_nuestro, solucion_20_nuestro, solucion_50_nuestro]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'solucion_20_nuestro' is not defined"
+     ]
+    }
+   ],
    "source": [
     "resultados_obtenidos_nuestros = [solucion_5_nuestro, solucion_15_nuestro, solucion_15_un_elemento_nuestro, solucion_20_nuestro, solucion_50_nuestro]"
    ]
@@ -1712,6 +1724,69 @@
     "solucion_100, tiempo_ejecucion_100 = solucion_greedy(pedidos_prensa_100)\n",
     "solucion_200, tiempo_ejecucion_200 = solucion_greedy(pedidos_prensa_200)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Resultados del algoritmo Greedy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?\n",
+      "--------------------------  --------------------------  ----------------------------------\n",
+      "                         2                           2  Sí\n",
+      "                         2                           2  Sí\n",
+      "                         3                           3  Sí\n",
+      "                         6                           6  Sí\n",
+      "                        10                           8  No\n",
+      "                         4                           5  No\n",
+      "                         5                           5  Sí\n",
+      "                         6                           6  Sí\n",
+      "                         8                           8  Sí\n",
+      "                         9                           9  Sí\n",
+      "                         9                          10  No\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultados_obtenidos = [solucion_5, solucion_7, solucion_10_pocos, solucion_10_varios, solucion_10_todos,\n",
+    "                        solucion_15, solucion_20, solucion_50, solucion_75, solucion_100, solucion_200]\n",
+    "\n",
+    "resultados_esperados = [resultado_esperado.cantidad_minima for resultado_esperado in resultados_esperados]\n",
+    "\n",
+    "table_data = []\n",
+    "for i in range(len(resultados_obtenidos)):\n",
+    "    es_correcto = \"Sí\" if resultados_esperados[i] == len(resultados_obtenidos[i]) else \"No\"\n",
+    "    row = [resultados_esperados[i], len(resultados_obtenidos[i]), es_correcto]\n",
+    "    table_data.append(row)\n",
+    "\n",
+    "headers = [\"Cantidad mínima esperada\", \"Cantidad mínima obtenida\", \"Se obtuvo el resultado esperado?\"]\n",
+    "\n",
+    "print(tabulate(table_data, headers=headers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparamos este algoritmo con el de Programación Lineal y Redondeo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
