agrego celda para q corran

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -2559,12 +2559,30 @@
     "solucion_greedy = solucion_greedy(pedidos_de_la_prensa)\n",
     "solucion_lp = solucion_para_Scaloni_LP(pedidos_de_la_prensa)\n",
     "solucion_backtracking = solucion_para_Scaloni(pedidos_de_la_prensa)\n",
-    "solcion_lp_aprox = solucion_para_Scaloni_LP_aprox(pedidos_de_la_prensa)\n",
-    "\n",
+    "solcion_lp_aprox = solucion_para_Scaloni_LP_aprox(pedidos_de_la_prensa)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solución greedy:  (['Casco', 'Colo Barco'], 2.86102294921875e-05)\n",
+      "Solución LP:  ([x_Messi, x_Barcon't], 0.003921985626220703)\n",
+      "Solución backtracking:  ([\"Barcon't\", 'Messi'], 3.4809112548828125e-05)\n",
+      "Solución LP aproximada:  (['Messi', \"Barcon't\"], 0.0027201175689697266)\n"
+     ]
+    }
+   ],
+   "source": [
     "print(\"Solución greedy: \", solucion_greedy)\n",
     "print(\"Solución LP: \", solucion_lp)\n",
     "print(\"Solución backtracking: \", solucion_backtracking)\n",
-    "print(\"Solución LP aproximada: \", solcion_lp_aprox)\n"
+    "print(\"Solución LP aproximada: \", solcion_lp_aprox)"
    ]
   }
  ],
