--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,14 +367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Mauro Zarate', 'Pezzella'], 0.0001285076141357422)\n"
+      "(['Mauro Zarate', 'Pezzella'], 0.00024628639221191406)\n"
      ]
     }
    ],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2463,7 +2463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dejamos una celda para que puedan correr los algoritmos con un archivo de entrada propio. Para esto, deben modificar la variable \"file_name\" con el nombre del archivo que quieran usar."
+    "Dejamos una celda para que puedan correr los algoritmos con un archivo de entrada propio. Para esto, deben modificar la variable \"path\" con el nombre del archivo que quieran usar."
    ]
   },
   {
@@ -2554,8 +2554,8 @@
     }
    ],
    "source": [
-    "file_name = \"sets/sets de la catedra/5.txt\"\n",
-    "pedidos_de_la_prensa = obtener_pedidos_de_la_prensa(file_name)\n",
+    "path = \"sets/sets de la catedra/5.txt\"\n",
+    "pedidos_de_la_prensa = obtener_pedidos_de_la_prensa(path)\n",
     "solucion_greedy = solucion_greedy(pedidos_de_la_prensa)\n",
     "solucion_lp = solucion_para_Scaloni_LP(pedidos_de_la_prensa)\n",
     "solucion_backtracking = solucion_para_Scaloni(pedidos_de_la_prensa)\n",
