--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,64 +323,67 @@
     "    return any(jugador in pedido for jugador in solucion)\n",
     "\n",
     "\n",
-    "def conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, indice, solucion, len_pedidos):\n",
+    "def conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i, solucion):\n",
     "    cantidad_de_jugadores = len(solucion_actual)\n",
     "    largo_solucion = len(solucion)\n",
-    "    if(cantidad_de_jugadores == len_pedidos or\n",
-    "       (largo_solucion > 0 and cantidad_de_jugadores == largo_solucion)):\n",
-    "        return False\n",
-    "    \n",
-    "    for i in range(indice, len_pedidos):\n",
-    "        pedido_actual = pedidos_de_prensa[i]\n",
-    "        if satisfecho(pedido_actual, solucion_actual):\n",
-    "            continue\n",
-    "        for jugador in pedido_actual:\n",
-    "            if cantidad_de_jugadores + 1 >= largo_solucion and largo_solucion != 0: \n",
-    "                return False\n",
-    "            \n",
-    "            solucion_actual.append(jugador)\n",
-    "            cantidad_de_jugadores += 1\n",
-    "            \n",
-    "            if verificar_solucion_para_Scaloni(pedidos_de_prensa, solucion_actual):\n",
-    "                solucion[:] = solucion_actual\n",
-    "                largo_solucion = cantidad_de_jugadores\n",
-    "            else:        \n",
-    "                valido = conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i + 1, solucion, len_pedidos)\n",
-    "                \n",
-    "                if not valido:\n",
-    "                    solucion_actual.pop()\n",
-    "                    break \n",
-    "            solucion_actual.pop()\n",
-    "            cantidad_de_jugadores -= 1\n",
     "\n",
-    "    return True "
+    "    if(largo_solucion > 0 and cantidad_de_jugadores == largo_solucion):\n",
+    "        return False                                          \n",
+    "\n",
+    "    pedido_actual = pedidos_de_prensa[i]\n",
+    "\n",
+    "    if satisfecho(pedido_actual, solucion_actual):\n",
+    "        return conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i + 1, solucion)\n",
+    "\n",
+    "\n",
+    "    for jugador in pedido_actual:\n",
+    "        if largo_solucion > 0 and cantidad_de_jugadores + 1 >= largo_solucion: \n",
+    "            return True\n",
+    "\n",
+    "        solucion_actual.append(jugador)\n",
+    "        cantidad_de_jugadores += 1\n",
+    "\n",
+    "        if verificar_solucion_para_Scaloni(pedidos_de_prensa[i:], solucion_actual):\n",
+    "            solucion[:] = solucion_actual\n",
+    "            largo_solucion = cantidad_de_jugadores\n",
+    "        else:\n",
+    "            valido = conjunto_minimo_para_Scaloni(pedidos_de_prensa, solucion_actual, i + 1, solucion)\n",
+    "\n",
+    "            if not valido:\n",
+    "                solucion_actual.pop()\n",
+    "                break \n",
+    "        solucion_actual.pop()\n",
+    "        cantidad_de_jugadores -= 1\n",
+    "\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Mauro Zarate', 'Pezzella'], 7.748603820800781e-05)\n"
+      "(['Dibu', 'Messi', 'Gallardo', 'Pity Martinez', 'El fantasma de la B', 'Beltran', 'Luka Romero', 'Burrito Ortega', \"Barcon't\"], 9.966773271560669)\n"
      ]
     }
    ],
    "source": [
     "def solucion_para_Scaloni(pedidos_de_prensa):\n",
     "    solucion = []\n",
+    "    pedidos_ordenados = sorted(pedidos_de_prensa, key= len)\n",
     "    tiempo_inicial = time.time()\n",
-    "    conjunto_minimo_para_Scaloni(pedidos_de_prensa, [], 0, solucion, len(pedidos_de_prensa))\n",
+    "    conjunto_minimo_para_Scaloni(pedidos_ordenados, [], 0, solucion)\n",
     "    tiempo_final = time.time()\n",
     "    tiempo_ejecucion = tiempo_final - tiempo_inicial\n",
     "    return solucion, tiempo_ejecucion\n",
     "\n",
     "\n",
     "# Ejemplo de uso\n",
-    "archivo_path = path_7\n",
+    "archivo_path = path_200\n",
     "pedidos_de_la_prensa = obtener_pedidos_de_la_prensa(archivo_path)\n",
     "solucion = solucion_para_Scaloni(pedidos_de_la_prensa)\n",
     "print(solucion)"
@@ -397,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,16 +428,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Casco', 'Pity Martinez', 'Tucu Pereyra', \"Barcon't\", 'Palermo', 'Dybala']"
+       "['Casco', 'Tucu Pereyra', 'Pity Martinez', \"Barcon't\", 'Palermo', 'Dybala']"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -466,11 +469,11 @@
      "text": [
       "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?      Tiempo de ejecución (s)\n",
       "-------------  --------------------------  --------------------------  ----------------------------------  -------------------------\n",
-      "5.txt                                   2                           2  Sí                                                5.74589e-05\n",
-      "7.txt                                   2                           2  Sí                                                0.000114202\n",
-      "10_pocos.txt                            3                           3  Sí                                                0.00314951\n",
-      "10_varios.txt                           6                           6  Sí                                                0.391852\n",
-      "10_todos.txt                           10                          10  Sí                                                2.78729\n"
+      "5.txt                                   2                           2  Sí                                                0\n",
+      "7.txt                                   2                           2  Sí                                                0\n",
+      "10_pocos.txt                            3                           3  Sí                                                0.000997066\n",
+      "10_varios.txt                           6                           6  Sí                                                0.00400662\n",
+      "10_todos.txt                           10                          10  Sí                                                0.181496\n"
      ]
     }
    ],
@@ -10082,7 +10085,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
