Acomodando detalles en back

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,14 +360,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(['Dibu', 'Messi', 'Gallardo', 'Pity Martinez', 'El fantasma de la B', 'Beltran', 'Luka Romero', 'Burrito Ortega', \"Barcon't\"], 9.966773271560669)\n"
+      "(['Dibu', 'Messi', 'Gallardo', 'Pity Martinez', 'El fantasma de la B', 'Beltran', 'Luka Romero', 'Burrito Ortega', \"Barcon't\"], 10.045454978942871)\n"
      ]
     }
    ],
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,48 +419,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "solucion_75, tiempo_ejecucion_75 = solucion_para_Scaloni(pedidos_prensa_75)"
+    "resultados_obtenidos = [solucion_5, solucion_7, solucion_10_pocos,solucion_10_varios, solucion_10_todos, solucion_15, solucion_20, solucion_50, solucion_75, solucion_100, solucion_200]\n",
+    "tiempos_ejecucion = [tiempo_ejecucion_5, tiempo_ejecucion_7, tiempo_ejecucion_10_pocos, tiempo_ejecucion_10_varios, tiempo_ejecucion_10_todos, tiempo_ejecucion_15, tiempo_ejecucion_20, tiempo_ejecucion_50, tiempo_ejecucion_75, tiempo_ejecucion_100, tiempo_ejecucion_200]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Casco', 'Tucu Pereyra', 'Pity Martinez', \"Barcon't\", 'Palermo', 'Dybala']"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "solucion_50, tiempo_ejecucion_50 = solucion_para_Scaloni(pedidos_prensa_50)\n",
-    "solucion_50"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resultados_esperados_reducido = resultados_esperados[:5]\n",
-    "resultados_obtenidos = [solucion_5, solucion_7, solucion_10_pocos,solucion_10_varios, solucion_10_todos]\n",
-    "tiempos_ejecucion = [tiempo_ejecucion_5, tiempo_ejecucion_7, tiempo_ejecucion_10_pocos, tiempo_ejecucion_10_varios, tiempo_ejecucion_10_todos]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -469,11 +438,17 @@
      "text": [
       "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?      Tiempo de ejecución (s)\n",
       "-------------  --------------------------  --------------------------  ----------------------------------  -------------------------\n",
-      "5.txt                                   2                           2  Sí                                                0\n",
-      "7.txt                                   2                           2  Sí                                                0\n",
-      "10_pocos.txt                            3                           3  Sí                                                0.000997066\n",
-      "10_varios.txt                           6                           6  Sí                                                0.00400662\n",
-      "10_todos.txt                           10                          10  Sí                                                0.181496\n"
+      "5.txt                                   2                           2  Sí                                                 0\n",
+      "7.txt                                   2                           2  Sí                                                 0\n",
+      "10_pocos.txt                            3                           3  Sí                                                 0\n",
+      "10_varios.txt                           6                           6  Sí                                                 0.00698137\n",
+      "10_todos.txt                           10                          10  Sí                                                 0.16357\n",
+      "15.txt                                  4                           4  Sí                                                 0.00100899\n",
+      "20.txt                                  5                           5  Sí                                                 0.00697255\n",
+      "50.txt                                  6                           6  Sí                                                 0.0907495\n",
+      "75.txt                                  8                           8  Sí                                                 0.420956\n",
+      "100.txt                                 9                           9  Sí                                                 2.06941\n",
+      "200.txt                                 9                           9  Sí                                                10.0123\n"
      ]
     }
    ],
@@ -481,7 +456,7 @@
     "# Imprime los resultados obtenidos y los esperados en una tabla\n",
     "resultados = []\n",
     "i = 0\n",
-    "for resultado_esperado in resultados_esperados_reducido:\n",
+    "for resultado_esperado in resultados_esperados:\n",
     "  es_correcto = \"Sí\" if resultado_esperado.cantidad_minima == len(resultados_obtenidos[i]) and \\\n",
     "    verificar_solucion_para_Scaloni(pedidos_prensa[i], resultados_obtenidos[i]) else \"No\"\n",
     "  resultados.append([resultado_esperado.nombre_archivo, resultado_esperado.cantidad_minima, len(resultados_obtenidos[i]), es_correcto, tiempos_ejecucion[i]]) \n",
@@ -498,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,20 +495,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archivo               Cantidad minima obtenida  Es válida la soliución?      Tiempo de ejecución (s)\n",
-      "------------------  --------------------------  -------------------------  -------------------------\n",
-      "5.txt                                        3  Sí                                        0.00216675\n",
-      "15.txt                                       5  Sí                                     7605.93\n",
-      "15_un_elemento.txt                          14  Sí                                        0.20838\n",
-      "20.txt                                       6  Sí                                     3032.28\n",
-      "50.txt                                      20  Sí                                     4992.13\n"
+      "Archivo               Cantidad minima obtenida  Es válida la solución?      Tiempo de ejecución (s)\n",
+      "------------------  --------------------------  ------------------------  -------------------------\n",
+      "5.txt                                        3  Sí                                      0.000997782\n",
+      "15.txt                                       4  Sí                                      0\n",
+      "15_un_elemento.txt                          14  Sí                                      0\n",
+      "20.txt                                       8  Sí                                      0\n",
+      "50.txt                                      20  Sí                                      0.00301027\n"
      ]
     }
    ],
@@ -545,7 +520,7 @@
     "  es_correcto = \"Sí\" if verificar_solucion_para_Scaloni(pedidos_prensa_nuestro[i], resultado_obtenido[0]) else \"No\"\n",
     "  resultados.append([archivos_nuestros[i], len(resultado_obtenido[0]), es_correcto,resultado_obtenido[1] ]) \n",
     "  i += 1\n",
-    "print(tabulate(resultados, headers=['Archivo', 'Cantidad minima obtenida', 'Es válida la soliución?', 'Tiempo de ejecución (s)']))"
+    "print(tabulate(resultados, headers=['Archivo', 'Cantidad minima obtenida', 'Es válida la solución?', 'Tiempo de ejecución (s)']))"
    ]
   },
   {
