--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,23 +1144,11 @@
     "    solucionado = False\n",
     "    solucion = []\n",
     "    jugadores_ordenados = ordenar_jugadores_por_apariciones(pedidos_de_la_prensa)\n",
-    "    while i < len(jugadores_ordenados) and not solucionado:\n",
-    "        jugadores_ordenados = ordenar_jugadores_por_apariciones(pedidos_de_la_prensa)\n",
-    "        jugador_actual = jugadores_ordenados[0]\n",
+    "    while not solucionado:\n",
+    "        jugador_actual = jugadores_ordenados[i]\n",
     "        solucion.append(jugador_actual)\n",
-    "        \n",
     "        if verificar_solucion_para_Scaloni(pedidos_de_la_prensa, solucion):\n",
     "            solucionado = True\n",
-    "        else:\n",
-    "            pedidos_de_la_prensa_sin_jugador_actual = []\n",
-    "            for pedido in pedidos_de_la_prensa:\n",
-    "                if jugador_actual in pedido:\n",
-    "                    if len(pedido) > 1:\n",
-    "                        nuevo_pedido = [jugador for jugador in pedido if jugador != jugador_actual]\n",
-    "                        pedidos_de_la_prensa_sin_jugador_actual.append(nuevo_pedido)\n",
-    "                else:\n",
-    "                    pedidos_de_la_prensa_sin_jugador_actual.append(pedido)\n",
-    "            # pedidos_de_la_prensa = [lista for lista in pedidos_de_la_prensa if jugador_actual not in lista]\n",
     "        i += 1\n",
     "    tiempo = time.time() - tiempo\n",
     "    return solucion, tiempo"
@@ -1175,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1184,17 +1172,17 @@
      "text": [
       "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?      Tiempo de ejecución (s)\n",
       "-------------  --------------------------  --------------------------  ----------------------------------  -------------------------\n",
-      "5.txt                                   2                           2  Sí                                                0.000590563\n",
-      "7.txt                                   2                           2  Sí                                                9.98974e-05\n",
-      "10_pocos.txt                            3                           3  Sí                                                0.00015974\n",
-      "10_varios.txt                           6                           7  No                                                0.000241756\n",
-      "10_todos.txt                           10                           9  No                                                0.000313044\n",
-      "15.txt                                  4                           5  No                                                0.000208139\n",
-      "20.txt                                  5                           5  Sí                                                0.000194788\n",
-      "50.txt                                  6                           7  No                                                0.000417709\n",
-      "75.txt                                  8                           9  No                                                0.000582457\n",
-      "100.txt                                 9                          10  No                                                0.000801802\n",
-      "200.txt                                 9                          10  No                                                0.00149107\n"
+      "5.txt                                   2                           2  Sí                                                3.8147e-05\n",
+      "7.txt                                   2                           4  No                                                2.3365e-05\n",
+      "10_pocos.txt                            3                           5  No                                                4.24385e-05\n",
+      "10_varios.txt                           6                          24  No                                                0.000234604\n",
+      "10_todos.txt                           10                          30  No                                                0.000155687\n",
+      "15.txt                                  4                           9  No                                                5.91278e-05\n",
+      "20.txt                                  5                           8  No                                                6.7234e-05\n",
+      "50.txt                                  6                          12  No                                                0.000183582\n",
+      "75.txt                                  8                          11  No                                                0.000155926\n",
+      "100.txt                                 9                          16  No                                                0.000404119\n",
+      "200.txt                                 9                          14  No                                                0.00153971\n"
      ]
     }
    ],
@@ -1228,29 +1216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Cuti Romero', 'Wachoffisde Abila', 'Colo Barco']\n",
-      "['Buonanotte', 'Chiquito Romero', 'Pity Martinez', 'Dibu']\n",
-      "['Riquelme', 'Armani', \"Barcon't\", 'Burrito Ortega', 'Colo Barco', 'Casco', 'Chiquito Romero', 'Cuti Romero']\n",
-      "['Beltran', 'Dibu', 'Chiquito Romero', 'Simeone', 'El fantasma de la B', \"Barcon't\", 'Colo Barco']\n",
-      "['Burrito Ortega', \"Barcon't\", 'Dibu', 'Di Maria', 'Dybala', 'Riquelme', 'Mauro Zarate', 'Cuti Romero', 'Messi', 'Zapelli', 'Simeone', 'Chiquito Romero']\n",
-      "['Dybala', 'Cuti Romero', 'Langoni', 'Zapelli', 'El fantasma de la B', 'Simeone', 'Changuito Zeballos', 'Messi', 'Tucu Pereyra', 'Mauro Zarate', 'Riquelme', 'Beltran', 'Colidio', 'Di Maria', 'Chiquito Romero', 'Buendia']\n",
-      "['Ogro Fabianni', 'Gallardo', 'Colidio', 'Soule', 'Cuti Romero', 'Chiquito Romero', 'Beltran', 'Pity Martinez', 'Luka Romero', 'Pezzella', 'Dybala', 'Buonanotte', 'Colo Barco', 'Mauro Zarate', 'Di Maria', 'Casco']\n",
       "Archivo              Cantidad minima obtenida  Es válida la solución?      Tiempo de ejecución (s)\n",
       "-----------------  --------------------------  ------------------------  -------------------------\n",
-      "5.txt                                       3  Sí                                      0.000177145\n",
-      "15.txt                                      4  No                                      0.00026989\n",
-      "15_un_jugador.txt                           8  No                                      0.000236273\n",
-      "20.txt                                      7  No                                      0.000300884\n",
-      "50.txt                                     12  No                                      0.000883579\n",
-      "30k.txt                                    16  No                                      0.196149\n",
-      "300k.txt                                   16  No                                      1.33376\n"
+      "5.txt                                       3  Sí                                      5.96046e-05\n",
+      "15.txt                                     10  Sí                                      0.000172377\n",
+      "15_un_jugador.txt                          14  Sí                                      0.000135899\n",
+      "20.txt                                     17  Sí                                      0.00171828\n",
+      "50.txt                                     26  Sí                                      0.000438929\n",
+      "30k.txt                                    31  Sí                                      0.0715678\n",
+      "300k.txt                                   31  Sí                                      0.342314\n"
      ]
     }
    ],
